cmake_minimum_required(VERSION 2.6)
project(Hopmod)

link_libraries(dl)

set(INSTALL_DESTINATION ${PROJECT_SOURCE_DIR})
set(INSTALL_LIBRARY_DESTINATION ${INSTALL_DESTINATION}/lib)
set(INSTALL_ARCHIVE_DESTINATION ${INSTALL_DESTINATION}/lib)
set(INSTALL_RUNTIME_DESTINATION ${INSTALL_DESTINATION}/bin)
set(INSTALL_LUA_PACKAGE_DESTINATION ${INSTALL_DESTINATION}/script/package)

IF(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE MinSizeRel CACHE STRING
      "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)

add_subdirectory(src)
