include(CheckIncludeFiles)
include(CheckFunctionExists)
include(CheckSymbolExists)

check_include_files(arpa/inet.h HAVE_ARPA_INET_H)
check_symbol_exists(TCP_CORK "netinet/tcp.h" HAVE_DECL_TCP_CORK)
check_include_files(dlfcn.h HAVE_DLFCN_H)
check_include_files(errno.h HAVE_ERRNO_H)
check_include_files(fcntl.h HAVE_FCNTL_H)
check_function_exists(fseeko HAVE_SEEKO)
check_include_files(inttypes.h HAVE_INTTYPES_H)
check_include_files(limits.h HAVE_LIMITS_H)
check_include_files(locale.h HAVE_LOCALE_H)
check_include_files(math.h HAVE_MATH_H)
check_function_exists(memmem HAVE_MEMEM)
check_include_files(memory.h HAVE_MEMORY_H)
check_include_files(netdb.h HAVE_NETDB_H)
check_include_files(netinet/in.h HAVE_NETINET_IN_H)
check_include_files(netinet/tcp.h HAVE_NETINET_TCP_H)
check_include_files(pthread.h HAVE_PTHREAD_H)
check_include_files(stdint.h HAVE_STDINT_H)
check_include_files(stdio.h HAVE_STDIO_H)
check_include_files(stdlib.h HAVE_STDLIB_H)
check_include_files(strings.h HAVE_STRINGS_H)
check_include_files(string.h HAVE_STRING_H)
check_include_files(sys/mman.h HAVE_SYS_MMAN_H)
check_include_files(sys/msg.h HAVE_SYS_MSG_H)
check_include_files(sys/select.h HAVE_SYS_SELECT_H)
check_include_files(sys/socket.h HAVE_SYS_SOCKET_H)
check_include_files(sys/stat.h HAVE_SYS_STAT_H)
check_include_files(sys/time.h HAVE_SYS_TIME_H)
check_include_files(sys/types.h HAVE_SYS_TYPES_H)
check_include_files(time.h HAVE_TIME_H)
check_include_files(unistd.h HAVE_UNISTD_H)

if(${CMAKE_SYSTEM_NAME} MATCHES Linux)
    set (LINUX 1)
endif(${CMAKE_SYSTEM_NAME} MATCHES Linux)

if(${CMAKE_SYSEM_NAME} MATCHES BSD)
    set (SOMEBSD 1)
endif(${CMAKE_SYSEM_NAME} MATCHES BSD)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/MHD_config.h.cmake ${CMAKE_CURRENT_SOURCE_DIR}/MHD_config.h)

add_subdirectory(src)

set(MICROHTTPD_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/include PARENT_SCOPE)
